--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="/src/assets/images/favicon.png" type="image/x-icon" />
-    <link rel="icon" href="/src/assets/images/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/src/assets/images/favicon.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="/src/assets/images/favicon.png"
+      type="image/x-icon"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>Sparelax - Spa Saloon React Template</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <title>Bienalive - Wellness</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
